# lindblad

./: .clang-format  .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  config.h.in  doxyfile.in
cmake/try_compile/: a.out  pragma_omp_simd.cpp
doc/: core.dox  main.dox  tutorials.dox
examples/: CMakeLists.txt  EIT.cpp  Laser.cpp  RabiOscillations.cpp  SteadyState.cpp  SteadyStateDirectDense.cpp  SteadyStateEIA.cpp  SteadyStateEIT.cpp  SteadyStateFromDynEIT.py  dynamicsEIT.py  plotRabiOscillationsData.py  readme.md  scanEIT.py
include/: Amplitude.hpp  CMakeLists.txt  Coupling.hpp  Decay.hpp  Integrator.hpp  Lindblad.hpp  MasterEqn.hpp  MasterEqnEvolution.hpp  MasterEqnRhs.hpp  RK4.hpp  SparseMatrix.hpp  qsys.hpp  readme.md
include/detail/: Coupling.hpp  Decay.hpp  GMRES.hpp  GeneralDecayOperator.hpp  Integrator.hpp  MasterEqnRhs.hpp  Memory.hpp  RK4.hpp  RK45.hpp  SourceSink.hpp  SparseApply.hpp
src/: CMakeLists.txt  Coupling.cpp  Decay.cpp  GMRES.cpp  GeneralDecayOperator.cpp  Integrator.cpp  Lindblad.cpp  MasterEqn.cpp  MasterEqnEvolution.cpp  MasterEqnRhs.cpp  Memory.cpp  RK4.cpp  RK45.cpp  SourceSink.cpp  SparseApply.cpp  qsys.cpp  readme.md
tests/: CMakeLists.txt  testUtils.hpp  test_Coupling.cpp  test_Decay.cpp  test_GMRES.cpp  test_GeneralDecayOperator.cpp  test_Integrator.cpp  test_MasterEqn.cpp  test_MasterEqnEvolution.cpp  test_MasterEqnRhs.cpp  test_MasterEquation.cpp  test_Memory.cpp  test_RK4.cpp  test_RK45.cpp  test_SourceSink.cpp  test_SparseMatrix.cpp  test_leftApply.cpp  test_rightApply.cpp
utilities/: ProgramToDoxygen.hs  download_gtest.sh  get_petsc.sh  get_petsc_rel.sh
